--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "sequelize": "^4.42.0",
     "socket.io": "^2.2.0",
     "uuid": "latest"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2",
+    "supertest": "^3.4.2"
   }
 }
