--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.0.2",
+    "random-sentence": "^1.0.4",
     "supertest": "^3.4.2"
   }
 }
