--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.13.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -20,8 +21,8 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "mysql2": "^1.6.4",
-    "randomstring": "^1.1.5",
     "random-sentence": "^1.0.4",
+    "randomstring": "^1.1.5",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "socket.io": "^2.2.0",
