--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "mysql2": "^1.6.4",
+    "onesignal-node": "^2.0.1",
     "random-sentence": "^1.0.4",
     "randomstring": "^1.1.5",
     "sequelize": "^4.42.0",
