--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "randomstring": "^1.1.5",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
+    "slack-webhook": "^1.0.0",
     "socket.io": "^2.2.0",
     "uuid": "latest"
   },
