--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sequelize-cli": "^5.4.0",
     "slack-webhook": "^1.0.0",
     "socket.io": "^2.2.0",
-    "uuid": "latest"
+    "uuid": "latest",
+    "@sentry/node": "latest"
   },
   "devDependencies": {
     "chai": "^4.2.0",
