--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@sentry/node": "latest",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.13.2",
     "cookie-parser": "~1.4.3",
@@ -17,6 +18,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.4.0",
+    "lodash": "latest",
     "mongoose": "^5.3.16",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
@@ -28,8 +30,7 @@
     "sequelize-cli": "^5.4.0",
     "slack-webhook": "^1.0.0",
     "socket.io": "^2.2.0",
-    "uuid": "latest",
-    "@sentry/node": "latest"
+    "uuid": "latest"
   },
   "devDependencies": {
     "chai": "^4.2.0",
