--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^5.3.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
@@ -33,6 +34,9 @@
     "slack-webhook": "^1.0.0",
     "socket.io": "^2.2.0",
     "uuid": "latest"
+  },
+  "engines": {
+    "node": "12.x"
   },
   "devDependencies": {
     "chai": "^4.2.0",
