--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
     "@sentry/node": "latest",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.13.2",
     "cookie-parser": "~1.4.3",
@@ -27,7 +28,6 @@
     "mysql2": "^1.6.4",
     "nodemon": "^1.19.0",
     "onesignal-node": "^2.0.1",
-    "random-sentence": "^1.0.4",
     "randomstring": "^1.1.5",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
