--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.4.0",
     "lodash": "latest",
+    "moment": "^2.24.0",
     "mongoose": "^5.3.16",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
