--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sentry/node": "latest",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.5",
     "cloudinary": "^1.13.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
@@ -30,6 +31,7 @@
     "nodemon": "^1.19.0",
     "onesignal-node": "^2.0.1",
     "randomstring": "^1.1.5",
+    "redis": "^2.8.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "slack-webhook": "^1.0.0",
