--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "randomstring": "^1.1.5",
     "redis": "^2.8.0",
     "sequelize": "^4.42.0",
+    "sequelize-cli": "^5.5.1",
     "slack-webhook": "^1.0.0",
     "socket.io": "^2.2.0",
     "uuid": "latest"
